@@ -2,41 +2,20 @@
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>mylyn-reviews-gerrit-parent</artifactId>
-		<groupId>org.eclipse.mylyn.reviews</groupId>
-		<version>0.9.0-SNAPSHOT</version>
-	</parent>
-	<artifactId>org.eclipse.mylyn.gerrit.tests</artifactId>
-	<packaging>eclipse-test-plugin</packaging>
-	<properties>
-		<mylyn-reviews-skip-test>${maven.test.skip}</mylyn-reviews-skip-test>
-	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<configuration>
-					<skip>${mylyn-reviews-skip-test}</skip>
-					<useUIHarness>false</useUIHarness>
-					<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-					<dependencies>
-						<dependency>
-							<type>p2-installable-unit</type>
-							<artifactId>org.eclipse.sdk.feature.group</artifactId>
-							<version>${platform-version}</version>
-						</dependency>
-					</dependencies>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-source-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+	<artifactId>mylyn-reviews-gerrit-parent</artifactId>
+	<groupId>org.eclipse.mylyn.reviews</groupId>
+	<version>0.9.0-SNAPSHOT</version>
+  </parent>
+  <artifactId>org.eclipse.mylyn.gerrit.tests</artifactId>
+  <packaging>eclipse-test-plugin</packaging>
+  <build>
+	<plugins>
+	  <plugin>
+		<groupId>org.eclipse.tycho</groupId>
+		<artifactId>tycho-source-plugin</artifactId>
+	  </plugin>
+	</plugins>
+  </build>
 </project>
